ansible/roles_ocp_workloads/ocp4_workload_performance_monitoring/files/grafana_route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: grafana-access
  namespace: example-namespace
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: grafana-tls
spec:
  port:
    targetPort: https
  tls:
    termination: reencrypt
  to:
    kind: Service
    name: grafana-service
    weight: 100
  wildcardPolicy: None
